--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "js-cookie": "^2.2.0",
     "vee-validate": "^2.2.0",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
